--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,21 @@
-<h1>Hola</h1>
+<div class="container">
+    <div class="card card-add" routerLink="#seccion1">
+        <h2>+</h2>
+    </div>
+
+    <div class="card" routerLink="#seccion2">
+        <h2>Card2</h2>
+    </div>
+
+    <div class="card">
+        <h2>Card3</h2>
+    </div>
+
+    <div class="card">
+        <h2>Card3</h2>
+    </div>
+
+
+</div>    
+
+<router-outlet></router-outlet>
